--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Notes</title>
+  <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20rx%3D%2220%22%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%237c3aed%22%2F%3E%3Cline%20x1%3D%2230%22%20y1%3D%2265%22%20x2%3D%2250%22%20y2%3D%2230%22%20stroke%3D%22%23fff%22%20stroke-width%3D%224%22%20stroke-linecap%3D%22round%22%2F%3E%3Cline%20x1%3D%2270%22%20y1%3D%2265%22%20x2%3D%2250%22%20y2%3D%2230%22%20stroke%3D%22%23fff%22%20stroke-width%3D%224%22%20stroke-linecap%3D%22round%22%2F%3E%3Cline%20x1%3D%2230%22%20y1%3D%2265%22%20x2%3D%2270%22%20y2%3D%2265%22%20stroke%3D%22%23fff%22%20stroke-width%3D%224%22%20stroke-linecap%3D%22round%22%2F%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2230%22%20r%3D%228%22%20fill%3D%22%23fff%22%2F%3E%3Ccircle%20cx%3D%2230%22%20cy%3D%2265%22%20r%3D%228%22%20fill%3D%22%23fff%22%2F%3E%3Ccircle%20cx%3D%2270%22%20cy%3D%2265%22%20r%3D%228%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
