deploy: sashasoft90/vault@e6e074e8daa544b000884d98caae2976c9bfc16f

--- a/de/slides/vibecodingslides-de.html
+++ b/de/slides/vibecodingslides-de.html
@@ -585,7 +585,9 @@ Isolation brauchen? → <span style="color:#ffd700">**Subagent**</span>
 
 *Die vollständige Dokumentation liegt in Obsidian*
 
+[blog.sacharov.de](https://blog.sacharov.de)
 [sashasoft90.github.io/vault_publish](https://sashasoft90.github.io/vault_publish/)
+
 
       </textarea>
     </section>
